kubernetes/argocd/values/qbittorrent/qbittorrent-deployment.yaml
# Password : qbittorrent123*qbittorrent
# Key : UkBarc3hsGzOZMgk85tKi8CnaiMIY7sxoyobLqy4aAU=
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: qbittorrent
spec:
  selector:
    matchLabels:
      app: qbittorrent
  replicas: 1
  template:
    metadata:
      labels:
        app: qbittorrent
        deployed_by: argocd
      annotations:
        vault.security.banzaicloud.io/vault-addr: "https://vault.local.soulkyu.net:443"
        vault.security.banzaicloud.io/vault-role: "default"
        vault.security.banzaicloud.io/vault-skip-verify: "true"
        vault.security.banzaicloud.io/vault-path: "kubernetes"
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 9.9.9.9
      containers:
        - name: gluetun-ivpn
          image: qmcgaw/gluetun:latest
          securityContext:                          
            privileged: true                        
            capabilities:                           
              add:                                  
                - NET_ADMIN
          ports:                                    
            - containerPort: 8888                   
            - containerPort: 8388                   
            - containerPort: 8388                   
              protocol: UDP                         
            - containerPort: 8000      
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
            - containerPort: 6881
          resources:
            limits:
              memory: "1024Mi"
              cpu: "1000m"
            requests:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
          - mountPath: /config
            name: qbittorrent-config
          - mountPath: /downloads
            name: qbittorrent-downloads
      volumes:
      - persistentVolumeClaim:
          claimName: qbittorrent-config
        name: qbittorrent-config
      - persistentVolumeClaim:
          claimName: qbittorrent-downloads
        name: qbittorrent-downloads
