kubernetes/argocd/values/qbittorrent/qbittorrent-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: qbittorrent
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: http
      targetPort: 8080
    - port: 6881
      name: jesaispasaussi
      targetPort: 6881
    - name: shadowsocks-01
      protocol: TCP
      port: 8388
  selector:
    app: qbittorrent
